--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-/src/fire
+/src/fire.js
 # dependencies
 /node_modules
 /.pnp
